--- a/game-store-fe/package.json
+++ b/game-store-fe/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -24,10 +25,10 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.1.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.2.0"
   }
 }
