--- a/game-store-fe/package.json
+++ b/game-store-fe/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-tooltip": "^5.26.3"
+    "react-tooltip": "^5.26.3",
+    "vercel": "^34.2.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.79",
