--- a/game-store-fe/package.json
+++ b/game-store-fe/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
