--- a/game-store-fe/package.json
+++ b/game-store-fe/package.json
@@ -21,8 +21,9 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-tooltip": "^5.26.3",
-    "vercel": "^34.2.7",
-    "uuid": "^10.0.0"
+    "sweetalert2": "^11.12.4",
+    "uuid": "^10.0.0",
+    "vercel": "^34.2.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.79",
