--- a/game-store-fe/package.json
+++ b/game-store-fe/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
