--- a/game-store-fe/package.json
+++ b/game-store-fe/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.23.1",
     "react-tooltip": "^5.26.3",
     "sweetalert2": "^11.12.4",
+    "sweetalert2-react-content": "^5.0.7",
     "uuid": "^10.0.0",
     "vercel": "^34.2.7"
   },
